--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -2,7 +2,8 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
-        <button><div class="navicon"></div></button>
+       <!-- <button><div class="navicon"></div></button>-->
+        <!--<a class="site-title" href="{{ '/' | absolute_url }}">{{ site.title }}</a>-->
         <ul class="visible-links">
           <li class="masthead__menu-item masthead__menu-item--lg"><a href="{{ '/' | absolute_url }}">{{ site.title }}</a></li>
           {% for link in site.data.navigation.main %}
