--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -16,7 +16,7 @@ layout: single
                      <div style="font-size:0.73em;color:blue">
                          
                       <span>
-                          <u><a href="http://localhost:4000/blogIndex" target="_blank">Ideas</a></u>
+                          <u><a href="http://themoralpanda.github.io/blogIndex" target="_blank">Ideas</a></u>
                       </span>&nbsp;&nbsp;&nbsp;
                       <span>
                           <u><a href="https://github.com/TheMoralPanda" target="_blank">Tech Projects</a></u>
