Link color changed in home page. Blog is 100% ready

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: single
 <div>
     <div style="">
                       <h4>Links</h4>
-                     <div style="font-size:0.73em;color:blue">
+                     <div style="font-size:0.73em;color:Green">
                          
                       <span>
                           <u><a href="http://themoralpanda.github.io/blogIndex" target="_blank">Ideas</a></u>
