--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -94,7 +94,7 @@
 {% elsif site.og_image %}
   <meta property="og:image" content="{% if site.og_image contains "://" %}{{ site.og_image }}{% else %}{{ site.og_image | absolute_url }}{% endif %}">
 {% endif %} 
-
+  <meta property="og:image" content="{{post.header.image}}">
 {% if page.date %}
   <meta property="og:type" content="article">
   <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
