--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,9 +1,9 @@
-<div class="masthead">
+<div class="masthead" style="font-size:0.85em;font-family: Ubuntu, sans-serif">
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
-      <nav id="site-nav" class="greedy-nav">
-        <a class="site-title" href="{{ '/' | absolute_url }}">{{ site.title }}</a>
+      <nav id="site-nav" class="greedy-nav">  
         <ul class="visible-links">
+          <li class="masthead__menu-item"><a class="site-title" href="{{ '/' | absolute_url }}">Home</a></li>
           {% for link in site.data.navigation.main %}
             {% if link.url contains 'http' %}
               {% assign domain = '' %}
