--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,69 +7,39 @@ layout: single
 <div style="margin-left:10px;">
     <h3> Hi there! </h3 >
 
-    <span style="font-size:1em">Welcome to my blog!<br/>This blog contains all the ideas, thoughts and opinions that I have worked on so far !</span>
-    <br/>
+    <span style="font-size:0.85em">
+        I'm Vig Venkat. <br/>
+        I live in Hong Kong. <br/>
+        I work as a Senior Software Engineer. At work, I mostly do Backend Engineering.
+        <br/><br/>
+        I love Technology and Music. <br/>
+        I'm currently learning both <i>Indian classical singing (carnatic)</i> and <i>Western Piano</i>
+        <br/><br/>    
 
+        In free time, I compose new music here -
+        <a href="http://anemptyboat.com/music"> AnEmptyBoatMusicProductions </a> <br/><br/>
 
+        <b>Blogs</b> <br/>
+        1. <a href="http://themoralpanda.github.io/blogIndex" target="_blank">Personal</a><br/>
+        2. <a href="http://anemptyboat.com"> AnEmptyBoatBlog </a> <br/>
+        
+    </span>    
+</div>
+<hr>
 <div>
     <div style="">
-                      <h4>Links</h4>
-                     <div style="font-size:0.73em;color:Green">
-                         
-                      <span>
-                          <u><a href="http://themoralpanda.github.io/blogIndex" target="_blank">Ideas</a></u>
-                      </span>&nbsp;&nbsp;&nbsp;
-                      <span>
-                          <u><a href="https://github.com/TheMoralPanda" target="_blank">Tech Projects</a></u>
-                      </span>&nbsp;&nbsp;&nbsp;
-                      <span>
-                          <u><a href="https://soundcloud.com/vigneshwar-venkatachalapathi" target="_blank">Music</a></u>
-                      </span>&nbsp;&nbsp;&nbsp;
-                      <span>
-                          <u><a href="/assets/pdf/Vigneshwar V_Resume.pdf" target="_blank">My Resume</a></u>
-                      </span><br/>
-                    </div>
-
-         <!--       <div style="width:50%">
-                    {% assign fullUrl = site.url | append: site.baseurl %}
-
-                    <ul>
-
-                        {% for post in site.posts limit:4 %}
-
-                        <li>
-                            <a href="{{ fullUrl | append: post.url }}">{{ post.title }}</a>
-                            <span style="font-size:0.65em"> {{ post.date | date: "%d %b , %Y" }} </span>
-                        </li>
-
-                        {% endfor %}
-                    </ul>
-                </div>
--->
-
-
-
+        <h4>Links</h4> 
+        <div style="font-size:0.73em;color:Green">
+        <span>
+            <u><a href="https://github.com/TheMoralPanda" target="_blank">Github</a></u>
+        </span>&nbsp;&nbsp;&nbsp;
+        <span>
+            <u><a href="http://anemptyboat.com/music" target="_blank">Music compositions</a></u>
+        </span>&nbsp;&nbsp;&nbsp;
+        <span>
+            <u><a href="/assets/pdf/Vigneshwar V_Resume.pdf" target="_blank">My Resume</a></u>
+        </span><br/>
     </div>
-
-
-    <h4>Recent Posts</h4>
-
-         <div style="font-size:0.85em;" >
-
-        
-            <ul>
-            {% for post in site.posts limit:5 %}
-              <li>
-                <a href="{{ site.url | append: post.url }}">{{post.title}}</a>
-              </li>
-            {% endfor %}
-            </ul>  
-        <!--{% include paginator.html %}
-         -->
-     </div>    
-</div>
-
-
-
+    </div>
 
 </div>
