Site home page updated

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,30 +5,42 @@ layout: single
 
 
 <div style="margin-left:10px;">
-    <h3> Hi there! </h3>
+    <h3> Hello 👋 </h3>
 
     <span style="font-size:0.85em">
-        Hello 👋 <br />
+        
         I'm Vig <br />
-        I am a Senior Software Engineer, specifically focusing on Backend Engineering at work. 
-        <br /><br />
-        Work:<br/>
-        &nbsp;&nbsp; current : M800 Ltd, Hong Kong
-        &nbsp;&nbsp; Past: Infosys, India
-        <br /><br />
-        Apart from work, I love <br>
-        Music:<br/>currently learning<br/>
-        &nbsp;&nbsp;  <i>Indian classical singing (carnatic)</i><br/>
-        &nbsp;&nbsp;  <i>Western Piano</i><br/>
+        I'm a Senior Software Engineer. Currently working for M800 Ltd, Hong Kong. 
+        Previously I worked at Infosys, India.
+        <br />
+        I'm passionate about Technology, Music and Philosophy. 
+        I'm currently learning<br/>
+        <ul>
+            <li>
+                Indian classical singing (carnatic)
+            </li>
+            <li>
+                Western Piano
+            </li>
+        </ul>
         In free time, I compose new music here -
         <a href="http://anemptyboat.com/music"> AnEmptyBoatMusicProductions </a> <br /><br />
         
-        Gaming: Especially FIFA [xbox gamertag - vickypathi]
+        I play e-games especially FIFA [xbox gamertag - vickypathi]
         
         <br /><br />
         <b>Blogs</b> <br />
-        1. <a href="http://themoralpanda.github.io/blogIndex" target="_blank">Personal - </a><br />
-        2. <a href="http://anemptyboat.com"> AnEmptyBoat </a> -  <br />
+        <ol>
+            <li>
+                <a href="https://vickyexplored.wordpress.com" target="_blank">Personal </a>
+            </li>            
+            <li>
+                <a href="https://themoralpanda.github.io/postArchive/" target="_blank">Technical </a>
+            </li>
+            <li>
+                <a href="http://anemptyboat.com"> AnEmptyBoat </a>
+            </li>
+        </ol>
 
     </span>
 </div>
